nfs-client-storageclass.yml
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
   name: nfs-client-provisioner
spec:
   replicas: 1
   strategy:
     type: Recreate
   template:
      metadata:
         labels:
            app: nfs-client-provisioner
      spec:
         serviceAccount: nfs-provisioner
         containers:
            -  name: nfs-client-provisioner
               image: registry.cn-hangzhou.aliyuncs.com/open-ali/nfs-client-provisioner
               volumeMounts:
                  -  name: nfs-client-root
                     mountPath:  /persistentvolumes
               env:
                    -  name: PROVISIONER_NAME
                       value: fuseim.pri/ifs
                    -  name: NFS_SERVER
                       value: 192.168.253.3
                    -  name: NFS_PATH
                       value: /opv
         volumes:
              - name: nfs-client-root
                nfs:
                    server: 192.168.253.3
                    path: /opv
					
---
apiVersion: storage.k8s.io/v1beta1
kind: StorageClass
metadata:
  name: managed-nfs-storage
provisioner: fuseim.pri/ifs
