nfs-test.yaml
apiVersion: apps/v1beta1
kind: StatefulSet
metadata:
    name: web
spec:
   serviceName: "nginx"
   replicas: 1
   volumeClaimTemplates:
   - metadata:
          name: test
　　　 annotations:
             volume.beta.kubernetes.io/storage-class: "managed-nfs-storage"
      spec:
         accessModes: [ "ReadWriteOnce" ]
         resources:
            requests:
               storage: 1Gi
   template:
      metadata:
          labels:
            app: nginx
     spec:
        serviceAccount: nfs-provisioner
        containers:
           - name: nginx
              image: nginx
              volumeMounts:
           - mountPath: "/data/nginx"
              name: ng
